# Agentic_Infrastructure_26

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  SOUL.md  pyproject.toml  requirements.txt  verify_test.py
.cursor/: rules
.github/workflows/: main.yml
chimera/: __init__.py  skills.py  trends.py
docs/: SRS.md  agentic_trajectory.md  frontend_spec.md  loom_checklist.md  mcp_configuration.md  rule_creation_spec.md  submission_report.md  tenx_mcp_setup.md
docs/adr/: 0001-spec-first-architecture.md
research/: architecture_strategy.md  research_summary.md  tooling_strategy.md
scripts/: spec_check.py
skills/: README.md  __init__.py  skill_generate_content.py  skill_publish_content.py  skill_trend_research.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: runtest.py  test_skills_interface.py  test_trend_fetcher.py
