[project]
name = "chimera"
version = "0.1.0"
description = "Project Chimera: spec-driven autonomous influencer infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }

dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "bandit>=1.7.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
